@@ -26,6 +26,9 @@
       \item \code{stats4::BIC()} assumed without checking that an object
       of class \code{"logLik"} has an \code{"nobs"} attribute:
       \code{glm()} fits did not and so \code{BIC()} failed for them.
+
+      \item In some circumstances a one-sided \code{mantelhaen.test()}
+    reported the p-value for the wrong tail.  (\PR{14514})
     }
   }
 }
